fix styles on safari

--- a/src/components/TerminalCommands/TerminalCommands.css
+++ b/src/components/TerminalCommands/TerminalCommands.css
@@ -4,7 +4,7 @@
   font-size: 16px;
   color: #f8f8f8;
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
